# lancedb

./: Cargo.toml
go/: .gitignore  .rustc_info.json  Cargo.toml  Makefile
go/go/: go.mod  go.sum  main_dynamic.go  output.arrow
go/go/c/: lancedb.h
go/src/: connection.rs  error.rs  index.rs  iterator.rs  lib.rs  merge.rs  query.rs  table.rs  util.rs
nodejs/lancedb/: table.ts
